--- a/MusicIsNearBy/assets/css/style.css
+++ b/MusicIsNearBy/assets/css/style.css
@@ -1546,3 +1546,38 @@ section {
   font-size: 13px;
   color: #fff;
 }
+
+/* Map markers */
+.marker-title {
+  position: absolute ;
+  font-family: 'Montserrat', sans-serif ;
+  left: 50%;
+  transform: translateX(-50%) ;
+  padding: 8px 16px ; 
+  background-color: rgba(51, 51, 51, 0.7) ;
+  color: #fff ;
+  font-weight: bold ;
+  font-size: 8px ;
+  text-align: center ;
+  border-radius: 8px ;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3) ;
+}
+
+#bootstrap-overrides .marker-title-inner {
+  display: flex ;
+  align-items: center ;
+  justify-content: center ;
+  width: 100% ;
+  height: 100% ;
+}
+
+
+#bootstrap-overrides .marker-title span {
+  width: 100%;
+}
+
+
+#bootstrap-overrides .my-marker {
+  width: 40px ;
+  height: 40px ;
+}
