--- a/MusicIsNearBy/assets/css/style.css
+++ b/MusicIsNearBy/assets/css/style.css
@@ -1563,6 +1563,12 @@ section {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3) ;
 }
 
+.marker-title:hover {
+  background-color: #f1ece6;
+  color: #5e503f;
+  cursor: pointer;
+}
+
 #bootstrap-overrides .marker-title-inner {
   display: flex ;
   align-items: center ;
