--- a/MusicIsNearBy/assets/css/style.css
+++ b/MusicIsNearBy/assets/css/style.css
@@ -166,9 +166,29 @@ h6 {
   border: 2px solid #9ead5c;
 }
 
+.schoolBtn {
+  color: #343a40;
+  border-radius: 4px;
+  padding: 7px 25px 8px 25px;
+  white-space: nowrap;
+  transition: 0.3s;
+  font-size: 14px;
+  display: inline-block;
+  border: 2px solid #9ead5c;
+}
+
 .get-started-btn:hover {
   background: #9ead5c;
   color: #343a40;
+}
+
+.schoolBtn:hover {
+  background: #9ead5c;
+  color: #fff;
+}
+
+.center-containerSchool {
+  text-align: center;
 }
 
 @media (max-width: 992px) {
@@ -1216,7 +1236,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  background: #ffc451;
+  background: #9ead5c;
   color: #151515;
   float: left;
   width: 44px;
@@ -1308,7 +1328,7 @@ section {
 
 .contact .php-email-form input:focus,
 .contact .php-email-form textarea:focus {
-  border-color: #ffc451;
+  border-color: #9ead5c;
 }
 
 .contact .php-email-form input {
@@ -1320,8 +1340,8 @@ section {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #ffc451;
-  border: 0;
+  border: 2px solid #9ead5c;
+  background-color: #fff;
   padding: 10px 24px;
   color: #151515;
   transition: 0.4s;
@@ -1329,7 +1349,8 @@ section {
 }
 
 .contact .php-email-form button[type=submit]:hover {
-  background: #ffcd6b;
+  background: #9ead5c;
+  color: #fff;
 }
 
 @keyframes animate-loading {
@@ -1586,4 +1607,9 @@ section {
 #bootstrap-overrides .my-marker {
   width: 40px ;
   height: 40px ;
+}
+
+table {
+  border-collapse: separate;
+  border-spacing: 15px;
 }
