--- a/MusicIsNearBy/assets/css/style.css
+++ b/MusicIsNearBy/assets/css/style.css
@@ -1612,6 +1612,7 @@ section {
 table {
   border-collapse: separate;
   border-spacing: 15px;
+  overflow-x: scroll !important;
 }
 
 .form-check-input:checked {
@@ -1640,4 +1641,7 @@ table {
 
 .checkbox-margin {
   margin-bottom: 10px; /* Измените значение на необходимое */
+}
+.table-wrapper {
+  overflow-x: auto;
 }
